2011-02-23  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=46500, make positioned elements work with vertical text.

        Patch computePositionedLogicalWidthUsing to be writing-mode-aware. Still not testable in a vertical text
        environment, since height computations will overwrite all values computed here until they are patched as well.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::computePositionedLogicalWidthUsing):
        * rendering/RenderBox.h:

2011-02-23  Renata Hodovan  <reni@webkit.org>

        Reviewed by Nikolas Zimmermann.

        FEColorMatrixElement changes doesn't require relayout
        https://bugs.webkit.org/show_bug.cgi?id=54880

        When the FEColorMatrixElement receives an update message but the given value remains the same we don't need
        to relayout the filter.

        No new tests are needed because this modificiation is covered by the dynamic update tests of FEColorMatrix.

        * platform/graphics/filters/FEColorMatrix.cpp:
        (WebCore::FEColorMatrix::setType):
        (WebCore::FEColorMatrix::setValues):
        * platform/graphics/filters/FEColorMatrix.h:
        * svg/SVGFEColorMatrixElement.cpp:
        (WebCore::SVGFEColorMatrixElement::setFilterEffectAttribute):
        (WebCore::SVGFEColorMatrixElement::svgAttributeChanged):
        * svg/SVGFEColorMatrixElement.h:

2011-02-23  James Robinson  <jamesr@chromium.org>

        REGRESSION(79466): fast/parser/test-unicode-characters-in-attribute-name.html fails

        Reverts TextCodecUTF16.cpp back to pre-79466 state.  The crash fix in 79466 was for UTF-8 only, it also caused the UTF16 path to fail.

        * platform/text/TextCodecUTF16.cpp:
        (WebCore::newStreamingTextDecoderUTF16LE):
        (WebCore::newStreamingTextDecoderUTF16BE):
        (WebCore::TextCodecUTF16::decode):
        (WebCore::TextCodecUTF16::encode):
